GitVersion1/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Approval_Status__c</fullName>
        <formula>TEXT(Account__r.Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Business__c</fullName>
        <formula>TEXT(Account__r.Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_IsDuplicate__c</fullName>
        <formula>Account__r.Is_Duplicate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName +&quot; &quot;+ Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType__c</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Members_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Team Members Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type_Formula__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Commercial Customer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_owner_Email_Address__c</fullName>
        <label>Account owner Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Email__c</fullName>
        <formula>IF( of_Items_Rejected__c &gt;0, &quot;PARTIALLY APPROVED&quot;, &quot;APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFN - Poland</fullName>
                </value>
                <value>
                    <fullName>CPN - France</fullName>
                </value>
                <value>
                    <fullName>CPN - Brazil</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>CQN - US</fullName>
                </value>
                <value>
                    <fullName>CQN - Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFR Name</label>
        <referenceTo>CFR_Data__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFR_Type__c</fullName>
        <formula>CFR_Data__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Email_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Email Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <formula>Account__r.Company_Email__c</formula>
        <label>Company Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store contact field value</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Id__c</fullName>
        <description>Poland specific - ID of company in national registry of companies</description>
        <label>Court Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <label>D-U-N-S #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSteward_Email__c</fullName>
        <label>DataSteward Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDH_Golden_Record_Number__c</fullName>
        <label>EDH - Golden Record Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Request_Approval__c</fullName>
        <formula>IF( 
Account__r.Request_Approved__c, 
&quot;Yes&quot;, 
&quot;No&quot;)</formula>
        <label>Existing Request Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golden_Record_Name__c</fullName>
        <formula>Account__c</formula>
        <label>Golden Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name_Formula__c</fullName>
        <formula>Account__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liabilities__c</fullName>
        <label>Liabilities</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Limit_Change_Reason__c</fullName>
        <label>Limit Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Sales Increase</fullName>
                </value>
                <value>
                    <fullName>Change of Payment Terms</fullName>
                </value>
                <value>
                    <fullName>Correctional Plan</fullName>
                </value>
                <value>
                    <fullName>Periodical Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Estimate__c</fullName>
        <label>Margin Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_Change__c</fullName>
        <description>Field used to request change of Account Name.</description>
        <label>Name Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_CreditTeam__c</fullName>
        <description>RollUp Sumarry Field</description>
        <label>Notify Credit Team</label>
        <summaryFilterItems>
            <field>RequestLineItem__c.Field_Name__c</field>
            <operation>equals</operation>
            <value>Requested_Credit_Limit__c</value>
        </summaryFilterItems>
        <summaryForeignKey>RequestLineItem__c.Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notify_Credit_Team__c</fullName>
        <formula>OR(AND(Account__r.Requested_Credit_Limit__c&lt;&gt;0, Request_Type__c&lt;&gt;&apos;Commercial Customer Update&apos;, NOT(ISPICKVAL(Status__c, &apos;Approved&apos;))), Notify_CreditTeam__c&gt;0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify Credit Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ongoing_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Activity_Production__c</fullName>
        <label>Other Activity/Production</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests (Parent Account)</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Related Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DATA</fullName>
                </value>
                <value>
                    <fullName>INNY WG KOMENTARZA</fullName>
                </value>
                <value>
                    <fullName>PF03 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF05 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF07 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF10 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF120 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF130 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF14 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF21 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF28 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF30 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF35 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF40 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF42 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF45 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF50 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF55 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF60 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF70 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF75 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF80 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>PF90 dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>RZBRO dni od daty faktury</fullName>
                </value>
                <value>
                    <fullName>RZGĘŚ rzut gęś</fullName>
                </value>
                <value>
                    <fullName>RZIND rzut indyk</fullName>
                </value>
                <value>
                    <fullName>RZKACZKA rzut kaczka</fullName>
                </value>
                <value>
                    <fullName>RZNIO rzut indyk</fullName>
                </value>
                <value>
                    <fullName>RZTRZ rzut trzoda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_ID__c</fullName>
        <label>Personal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_ID_validation_formula__c</fullName>
        <description>Formula checking Polish Personal Identification Number (PESEL) for physical entities not having Tax ID. Result of FALSE means error in PESEL number. Valid to Business=&apos;Poland&apos;, can validation can be extended for other countries.</description>
        <formula>IF(AND(LEN( Personal_ID__c )=11,ISNUMBER( Personal_ID__c )) , 
IF( 
(MOD((VALUE( MID( Personal_ID__c, 1, 1))* 1 + 
VALUE( MID( Personal_ID__c, 2, 1))* 3 + 
VALUE( MID( Personal_ID__c, 3, 1))* 7 + 
VALUE( MID( Personal_ID__c, 4, 1))* 9 + 
VALUE( MID( Personal_ID__c, 5, 1))* 1 + 
VALUE( MID( Personal_ID__c, 6, 1))* 3 + 
VALUE( MID( Personal_ID__c, 7, 1))* 7 + 
VALUE( MID( Personal_ID__c, 8, 1))* 9 + 
VALUE( MID( Personal_ID__c, 9, 1))* 1 + 
VALUE( MID( Personal_ID__c, 10, 1))* 3 + 
VALUE( MID( Personal_ID__c, 11, 1))* 1),10))=0,TRUE,FALSE) 
, FALSE)</formula>
        <label>Personal ID formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_City__c</fullName>
        <label>Physical Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Country__c</fullName>
        <label>Physical Address Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Address_State_Province__c</fullName>
        <label>Physical Address State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Address_Street__c</fullName>
        <label>Physical Address Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Zip_Postal_Code__c</fullName>
        <label>Physical Address Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_County_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical County/Community</label>
        <referenceTo>County_Community__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to indicate the record is locked for edits</description>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Processing_Log__c</fullName>
        <description>Field created to track historically how Approvals are processed. Visible only to DS and Admin.</description>
        <label>Req Processing Log</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Credit_Limit__c</fullName>
        <label>Requested Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Territories__c</fullName>
        <label>Secondary Territories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Securities__c</fullName>
        <label>Securities</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <label>Source System ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_farmer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT farmer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterinary_Id__c</fullName>
        <description>Poland specific - national registry of veterinary approved companies - for identification purposes.</description>
        <label>Veterinary Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Estimate__c</fullName>
        <label>Volume Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Items_Approved__c</fullName>
        <label># of Items Approved</label>
        <summaryFilterItems>
            <field>RequestLineItem__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>RequestLineItem__c.Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Items_Rejected__c</fullName>
        <label># of Items Rejected</label>
        <summaryFilterItems>
            <field>RequestLineItem__c.Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>RequestLineItem__c.Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Commercial_Customer_Update</fullName>
        <columns>Account_Business__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Commercial Customer Update</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Manager Approved,Approved,Rejected</value>
        </filters>
        <label>All Commercial Customer Update</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Steward_CFN_US</group>
            <group>Data_Steward_CPN_India</group>
            <group>Data_Steward_CQN_NA</group>
            <group>Data_Steward_Poland</group>
            <group>Data_Steward_US</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Draft_Requests</fullName>
        <columns>Account_Business__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status_Email__c</columns>
        <columns>of_Items_Approved__c</columns>
        <columns>of_Items_Rejected__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All Draft Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Steward_Poland</group>
            <group>Data_Steward_US</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Prospect_Conversion</fullName>
        <columns>Account_Business__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Prospect_Conversion</value>
        </filters>
        <label>All Prospect Conversion</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Steward_CFN_US</group>
            <group>Data_Steward_CPN_India</group>
            <group>Data_Steward_CQN_NA</group>
            <group>Data_Steward_Canada</group>
            <group>Data_Steward_Poland</group>
            <group>Data_Steward_Spain_Mila</group>
            <group>Data_Steward_US</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Prospect_Conversion_vietnam</fullName>
        <columns>Account_Business__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Request__c.Prospect_Conversion</value>
        </filters>
        <label>Tất cả chuyển đổi triển vọng</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Steward_Vietnam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Request</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All Submitted Request</label>
        <sharedTo>
            <role>Marketing_Coordinator</role>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
</CustomObject>